# Personal-Projects

Accounting Project (C)/: Documentation - project 2.docx  README.md  account_management.c  account_management.h  checkings.c  checkings.h  export.c  export.h  financial_transactions.c  financial_transactions.h  main.c  menu.c  menu.h  struct.h  variables.h  view.c  view.h
Company (Python)/: README.md  api_request.py  db.sqlite3
Company (Python)/aplicatie1/: forms.py  models.py  urls.py  views.py
Company (Python)/aplicatie1/migrations/: 0001_initial.py
Company (Python)/aplicatie2/: forms.py  models.py  urls.py  views.py
Company (Python)/aplicatie2/migrations/: 0001_initial.py
Company (Python)/django_project/: context_processors.py  settings.py  urls.py
Company (Python)/my_api/: serializers.py  urls.py  views.py
Company (Python)/pontaj/: middleware.py  models.py  urls.py  views.py
Company (Python)/templates/: base.html
Company (Python)/userprofile/: forms.py  urls.py  views.py
Professor PAC-MAN/: questions.txt
Professor PAC-MAN (C#)/: Profesorul Pac-Man.sln
Professor Pac-Man (C#)/: Proiect atestat INFORMATICA - Profesorul PAC-MAN.docx  README.md
Professor Pac-Man (C#)/Profesorul Pac-Man/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Pagina_prezentare.Designer.cs  Pagina_prezentare.cs  Profesorul Pac-Man.csproj  Program.cs
Property Manager (C++)/: README.md  cosGUI.cpp  domain.cpp  notificationList.cpp  notificationList.h  repo.cpp
Python - mini projects/: README.md
Python - mini projects/COVID/: README.md  tema_covid.py
Python - mini projects/Data Mining/: README.md  bnr_all_data (selenium).py  bnr_data (BeautifulSoup).py  emag.py
Python - mini projects/Files/: README.md  proiect_fisiere.py
Residential administrator/: IteratorVectorT.cpp  LocatarGUI.cpp  LocatarGUI.h  LocatarGUIModele.cpp  README.md  VectorDinamicTemplate.cpp  VectorDinamicTemplate.h  cosGUI.h  cosGUI2.cpp  cosGUI2.h  domain.h  main.cpp  service.cpp  tests.cpp  ui.h  undo.cpp  validator.cpp
Residential administrator (C++)/: IteratorVectorT.h  LocatarGUIModele.h  MyTableModel.h  diagrama_uml.docx  observer.h  undo.h  validator.h
Residential administrator(C++)/: CMakeLists.txt  MyTableModel.cpp  repo.h  service.h  tests.h  ui.cpp
(+16 files in other folders)
